artı login sayfası
anasayfayı tamamlayıp login sayfası ekledim

--- a/kişisel web sitesi/Anasayfa.html
+++ b/kişisel web sitesi/Anasayfa.html
@@ -6,20 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ana Sayfa</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
-<body>
+<body class="anasayfaa">
     <div class="anaKısım">
         <div class="navbar">
             <div class="logo">
                 <img src="bolulogo1.png" alt="logo" width="100" height="70">
             </div>
             <ul>
-                <li><a href="#">Ana Sayfa</a></li>
-                <li><a href="#">Hakkımızda</a></li>
-                <li><a href="#">Özgeçmiş</a></li>
-                <li><a href="#">Şehrim</a></li>
-                <li><a href="#">İletişim</a></li>
+                <li><a href="#" class="aktif"><i class="fas fa-home"></i>Ana Sayfa</a></li>
+                <li><a href="#"><i class="fas fa-user"></i>Hakkımızda</a></li>
+                <li><a href="#"><i class="fas fa-edit"></i>Özgeçmiş</a></li>
+                <li><a href="#"><i class="fas fa-tree"></i>Şehrim</a></li>
+                <li><a href="#"><i class="fas fa-phone"></i>İletişim</a></li>
             </ul>
+        </div>
+        <div class="center">
+            <h1>BOLU'YU YAKINDAN TANIYIN</h1>
+            <h2>SİTEME HOŞGELDİNİZ</h2>
+            <div class="buton">
+                <button><a href="login.html">LOGIN</a></button>
+                <button>Vermedim</button>
+            </div>
         </div>
     </div>
 </body>
