--- a/kişisel web sitesi/sehrim.html
+++ b/kişisel web sitesi/sehrim.html
@@ -4,12 +4,112 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Şehrim</title>
 </head>
-<body>
-    resimler
-    yazılar
-    yemekler
-    gezilecek yerler
+<body class="sehrimSayfa">
+    <div class="Bolu">
+    <div class="Boluarka">
+        <div class="logosehrim">
+            <img src="bolulogo1.png" alt="logo">
+        </div>
+        <div class="titleLogo"><b>BOLU</b></div>
+        <div class="bilgi">
+            <p>Bolu'nun il trafik kodu 14, yüz ölçümü 8323 km² ve il geneli nüfusu 316.126dır.</p>
+            <h4>Bolu'da başlıca gezilecek yerler:</h4>
+            <ul>
+                <li>Gölcük tabiat parkı</li>
+                <li>Abant tabiat parkı</li>
+                <li>Yedigöller Milli Parkı</li>
+                <li>Akkaya Travertenleri</li>
+                <li>Akşamseddin Türbesi(Göynük)</li>
+                <li>Tokadi Hayrettin Türbesi ve Mesire Alanı</li>
+                <li>Kartalkaya Kayak Merkezi</li>
+            </ul>
+            <h4>Bolu'da meşhur yemekler:</h4>
+            <ul>
+                <li>Yoğurtlu Gözleme</li>
+                <li>Bolu Çikolatası</li>
+                <li>Keşli Cevizli Erişte</li>
+                <li>Saray Helvası</li>
+                <li>Abant Sarması</li>
+                <li>Patatesli Köy Ekmeği</li>
+                <li>Kedibatmaz</li>
+            </ul>
+        </div>
+    </div>
+    </div>
+    <div class="Gerede">
+        <div class="geredeArka">
+            <div class="logosehrim">
+                <img src="geredelogo.jpeg" alt="logo">
+            </div>
+            <div class="titleLogo"><b>GEREDE</b></div>
+            <div class="bilgi">
+                <p>Gerede'nin yüz ölçümü 1255 km² ve nüfusu 33.833tür.</p>
+                <h4>Gerede'de başlıca gezilecek yerler:</h4>
+                <ul>
+                    <li>Keçi Kalesi</li>
+                    <li>Esentepe Mesire Alanı</li>
+                    <li>Ramazan Dede Türbesi</li>
+                    <li>Aykut Dağı Kayak Merkezi</li>
+                    <li>Yıldırım Beyazıt Camii</li>
+                    <li>Gerede Panayırı</li>
+                    <li>Kiliseli Tüccar Hanı</li>
+                </ul>
+                <h4>Gerede'de meşhur yemekler:</h4>
+            <ul>
+                <li>Şakşak Helvası</li>
+                <li>Köfter</li>
+                <li>Mıklama</li>
+                <li>Keş</li>
+                <li>Kaz</li>
+                <li>Tarhana Çorbası</li>
+                <li>Etli Üçgen Makarna</li>
+            </ul>
+            </div>
+        </div>
+    </div>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="gölcükAK.jpeg" class="d-block w-100" alt="..." width="500px" height="200px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>GÖLCÜK</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="abant.jpeg" class="d-block w-100" alt="..." width="500px" height="200px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>ABANT GÖLÜ</h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="yedigöller.jpeg" class="d-block w-100" alt="..." width="500px" height="200px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>YEDİGÖLLER</h5>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    
+        
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
