--- a/kişisel web sitesi/sehrim.html
+++ b/kişisel web sitesi/sehrim.html
@@ -9,6 +9,18 @@
     <title>Şehrim</title>
 </head>
 <body class="sehrimSayfa">
+  <div class="navbar">
+    <div class="logo">
+        <i class="fa-solid fa-computer"></i>ESMA YILDIZ
+    </div>
+    <ul>
+      <li><a href="Hakkımda.html" class="aktif"><i class="fas fa-user"></i>Hakkımızda</a></li>
+      <li><a href="ozgecmis.html"><i class="fas fa-edit"></i>Özgeçmiş</a></li>
+      <li><a href="sehrim.html"><i class="fas fa-tree"></i>Şehrim</a></li>
+      <li><a href="iletisim.html"><i class="fas fa-phone"></i>İletişim</a></li>
+      <li><a href="login.html"><i class="fas fa-right-to-bracket"></i>Login</a></li>
+    </ul>
+</div>
     <div class="Bolu">
     <div class="Boluarka">
         <div class="logosehrim">
