--- a/kişisel web sitesi/login.html
+++ b/kişisel web sitesi/login.html
@@ -14,7 +14,7 @@
         <div class="logologin">
             <img src="logologin3.jpeg" alt="logo">
         </div>
-        <form action="#">
+        <form action="login.php" method="POST">
             <div class="titleLogo">Login</div>
             <div class="girisKutusu">
                 <input type="email" placeholder="E-mailinizi Giriniz" required>
@@ -30,13 +30,13 @@
         </form>
         <div class="yazi">Giriş yapın veya bağlanın</div>
         <div class="github">
-            <a href="https://github.com/login"><i class="fab fa-github"></i>Github'a Bağlanın</a> 
+            <a href="iletisim.html"><i class="fas fa-phone"></i>İletişim</a> 
         </div>
         <div class="linkedin">
-            <a href="https://tr.linkedin.com/"><i class="fab fa-linkedin"></i>Linkedin'e Bağlanın</a>
+            <a href="sehrim.html"><i class="fas fa-tree"></i>Şehrim</a>
         </div>
         <div class="anaSayfaLogin">
-            <a href="Anasayfa.html"><i class="fas fa-home"></i>Anasayfaya Bağlanın</a>
+            <a href="Hakkımda.html"><i class="fas fa-user"></i>Hakkımda</a>
         </div>
     </div>
 </div>    
