--- a/kişisel web sitesi/iletisim.html
+++ b/kişisel web sitesi/iletisim.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>İletişim Sayfası</title>
+    <script src="iletisim.js"></script>
 </head>
 <body class="iletisim">
     <div class="navbar">
@@ -15,20 +16,23 @@
             <i class="fa-solid fa-computer"></i>ESMA YILDIZ
         </div>
         <ul>
-          <li><a href="Hakkımda.html" class="aktif"><i class="fas fa-user"></i>Hakkımızda</a></li>
+          <li><a href="Hakkimda.html"><i class="fas fa-user"></i>Hakkımızda</a></li>
           <li><a href="ozgecmis.html"><i class="fas fa-edit"></i>Özgeçmiş</a></li>
           <li><a href="sehrim.html"><i class="fas fa-tree"></i>Şehrim</a></li>
-          <li><a href="iletisim.html"><i class="fas fa-phone"></i>İletişim</a></li>
+          <li><a href="mirasımız.html"><i class="fas fa-leaf"></i>Mirasımız</a></li>
+          <li><a href="ilgiAlanlarım.html"><i class="fas fa-camera"></i>İlgi Alanlarım</a></li>
+          <li><a href="iletisim.html" class="aktif"><i class="fas fa-phone"></i>İletişim</a></li>
           <li><a href="login.html"><i class="fas fa-right-to-bracket"></i>Login</a></li>
       </ul>
     </div>
+    <form class="iletisimjs" id="iletisimm" name="iletisimm" onsubmit="return iletisimcntrl()">
     <div class="baslık"><h3>İLETİŞİM</h3></div>
     <div class="iletisimana">
       <div class="iletisimic">
     <div class="input-group w-75 p-4">
       <span class="input-group-text mt-4 ">Adınız ve Soyadınız:</span>
-      <input type="text" aria-label="First name" class="form-control mt-4">
-      <input type="text" aria-label="Last name" class="form-control mt-4">
+      <input type="text" aria-label="First name" class="form-control mt-4" name="ad" id="ad">
+      <input type="text" aria-label="Last name" class="form-control mt-4" name="soyad" id="soyad">
     </div>
       <div class="soru p-4 w-75">Cinsiyetinizi seçiniz:</div>
     <div class="form-check">
@@ -47,14 +51,14 @@
     <div class="row g-2">
       <div class="col-md p-4 w-75">
         <div class="form-floating">
-          <input type="email" class="form-control" id="floatingInputGrid" placeholder="name@sakarya.edu.tr.">
+          <input type="email" class="form-control" id="email" name="email" placeholder="name@sakarya.edu.tr.">
           <label for="floatingInputGrid">Email Adresiniz</label>
         </div>
       </div>
       <div class="col-md p-4 w-75">
         <div class="form-floating">
-          <select class="form-select" id="floatingSelectGrid" aria-label="Floating label select example">
-            <option selected>Seçiniz</option>
+          <select class="form-select" aria-label="Floating label select example" id="bolum" name="bolum">
+            <option selected >Seçiniz</option>
             <option value="1">Bilgisayar Mühendisliği</option>
             <option value="2">Bilişim Sistemleri Mühendisliği</option>
             <option value="3">Yazılım Mühendisliği</option>
@@ -84,8 +88,8 @@
     </div>
     <div class="soru p-4 w-75">İletişime geçmek istediğiniz konu:</div>
     <div class="selekt p-4">
-    <select class="form-select w-75" aria-label="Default select example">
-      <option selected>Seçiniz</option>
+    <select class="form-select w-75" aria-label="Default select example" id="konu" name="konu">
+      <option selected >Seçiniz</option>
       <option value="1">Öneri</option>
       <option value="2">Şikayet</option>
       <option value="3">İstek</option>
@@ -98,7 +102,7 @@
     </div>
   <div class="soru p-4 w-75">Konuyla ilgili yorumunuzu belirtiniz:</div>
     <div class="form-floating p-4 w-75">
-      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px" id="yorum" name="yorum"></textarea>
     </div>
     <div class="butonlar p-4">
     <input class="btn btn-primary" type="submit" value="GÖNDER">
@@ -106,39 +110,7 @@
   </div>
   </div>
 </div>
-
-<!--<script>
-function isValid(frm)
-{
-    var adi = frm.adi.value;
-    var soyadi = frm.soyadi.value;
-    var email = frm.email.value;
-    var atpos=email.indexOf("@");
-    var dotpos=email.lastIndexOf(".");
-
-    if ( adi==null || adi=="" )
-    {
-        alert("Kullanıcı adı boş olamaz");
-        return false;
-    }
-    
-    if ( soyadi==null || soyadi=="" )
-    {
-        alert("Soyadı boş olamaz");
-        return false;
-    }
-    
-    if ( atpos<1 || dotpos<atpos+2 || dotpos+2>=email.length )
-    {
-        alert("Geçerli email adresi girin");
-        return false;
-    }      
-    return true;
-}
-    </script>-->
-  
-
-
+</form>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
