--- a/kişisel web sitesi/sehrim.html
+++ b/kişisel web sitesi/sehrim.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Şehrim</title>
 </head>
@@ -14,112 +15,245 @@
         <i class="fa-solid fa-computer"></i>ESMA YILDIZ
     </div>
     <ul>
-      <li><a href="Hakkımda.html" class="aktif"><i class="fas fa-user"></i>Hakkımızda</a></li>
+      <li><a href="Hakkimda.html"><i class="fas fa-user"></i>Hakkımızda</a></li>
       <li><a href="ozgecmis.html"><i class="fas fa-edit"></i>Özgeçmiş</a></li>
-      <li><a href="sehrim.html"><i class="fas fa-tree"></i>Şehrim</a></li>
+      <li><a href="sehrim.html" class="aktif"><i class="fas fa-tree"></i>Şehrim</a></li>
+      <li><a href="mirasımız.html"><i class="fas fa-leaf"></i>Mirasımız</a></li>
+      <li><a href="ilgiAlanlarım.html"><i class="fas fa-camera"></i>İlgi Alanlarım</a></li>
       <li><a href="iletisim.html"><i class="fas fa-phone"></i>İletişim</a></li>
       <li><a href="login.html"><i class="fas fa-right-to-bracket"></i>Login</a></li>
     </ul>
 </div>
-    <div class="Bolu">
-    <div class="Boluarka">
-        <div class="logosehrim">
-            <img src="bolulogo1.png" alt="logo">
-        </div>
-        <div class="titleLogo"><b>BOLU</b></div>
-        <div class="bilgi">
-            <p>Bolu'nun il trafik kodu 14, yüz ölçümü 8323 km² ve il geneli nüfusu 316.126dır.</p>
-            <h4>Bolu'da başlıca gezilecek yerler:</h4>
-            <ul>
-                <li>Gölcük tabiat parkı</li>
-                <li>Abant tabiat parkı</li>
-                <li>Yedigöller Milli Parkı</li>
-                <li>Akkaya Travertenleri</li>
-                <li>Akşamseddin Türbesi(Göynük)</li>
-                <li>Tokadi Hayrettin Türbesi ve Mesire Alanı</li>
-                <li>Kartalkaya Kayak Merkezi</li>
-            </ul>
-            <h4>Bolu'da meşhur yemekler:</h4>
-            <ul>
-                <li>Yoğurtlu Gözleme</li>
-                <li>Bolu Çikolatası</li>
-                <li>Keşli Cevizli Erişte</li>
-                <li>Saray Helvası</li>
-                <li>Abant Sarması</li>
-                <li>Patatesli Köy Ekmeği</li>
-                <li>Kedibatmaz</li>
-            </ul>
-        </div>
-    </div>
-    </div>
-    <div class="Gerede">
-        <div class="geredeArka">
-            <div class="logosehrim">
-                <img src="geredelogo.jpeg" alt="logo">
-            </div>
-            <div class="titleLogo"><b>GEREDE</b></div>
-            <div class="bilgi">
-                <p>Gerede'nin yüz ölçümü 1255 km² ve nüfusu 33.833tür.</p>
-                <h4>Gerede'de başlıca gezilecek yerler:</h4>
-                <ul>
-                    <li>Keçi Kalesi</li>
-                    <li>Esentepe Mesire Alanı</li>
-                    <li>Ramazan Dede Türbesi</li>
-                    <li>Aykut Dağı Kayak Merkezi</li>
-                    <li>Yıldırım Beyazıt Camii</li>
-                    <li>Gerede Panayırı</li>
-                    <li>Kiliseli Tüccar Hanı</li>
-                </ul>
-                <h4>Gerede'de meşhur yemekler:</h4>
-            <ul>
-                <li>Şakşak Helvası</li>
-                <li>Köfter</li>
-                <li>Mıklama</li>
-                <li>Keş</li>
-                <li>Kaz</li>
-                <li>Tarhana Çorbası</li>
-                <li>Etli Üçgen Makarna</li>
-            </ul>
-            </div>
-        </div>
-    </div>
-    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="gölcükAK.jpeg" class="d-block w-100" alt="..." width="500px" height="200px">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>GÖLCÜK</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="abant.jpeg" class="d-block w-100" alt="..." width="500px" height="200px">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>ABANT GÖLÜ</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="yedigöller.jpeg" class="d-block w-100" alt="..." width="500px" height="200px">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>YEDİGÖLLER</h5>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+<div class="Bolu">
+  <div class="Boluarka">
+      <div class="logosehrim">
+          <img src="bolulogo1.png" alt="logo">
       </div>
-    
-        
+      <div class="titleLogo"><b><h2>BOLU</h2></b></div>
+      <div class="bilgi">
+          <p>Bolu'nun il trafik kodu 14, yüz ölçümü 8323 km² ve il geneli nüfusu 316.126dır.</p>
+          <h4>Bolu'da başlıca gezilecek yerler:</h4>
+          <ul>
+              <li>Gölcük tabiat parkı</li>
+              <li>Abant tabiat parkı</li>
+              <li>Yedigöller Milli Parkı</li>
+              <li>Akkaya Travertenleri</li>
+              <li>Akşamseddin Türbesi(Göynük)</li>
+              <li>Tokadi Hayrettin Türbesi ve Mesire Alanı</li>
+              <li>Kartalkaya Kayak Merkezi</li>
+          </ul>
+          <h4>Bolu'da meşhur lezzetler:</h4>
+          <ul>
+              <li>Yoğurtlu Gözleme</li>
+              <li>Bolu Çikolatası</li>
+              <li>Keşli Cevizli Erişte</li>
+              <li>Saray Helvası</li>
+              <li>Abant Sarması</li>
+              <li>Patatesli Köy Ekmeği</li>
+              <li>Kedibatmaz</li>
+          </ul>
+      </div>
+  </div>
+  </div>
+  <div class="Gerede">
+      <div class="geredeArka">
+          <div class="logosehrim">
+              <img src="geredelogo.jpeg" alt="logo">
+          </div>
+          <div class="titleLogo"><b><h2>GEREDE</h2></b></div>
+          <div class="bilgi">
+              <p>Gerede'nin yüz ölçümü 1255 km² ve nüfusu 33.833tür.</p>
+              <h4>Gerede'de başlıca gezilecek yerler:</h4>
+              <ul>
+                  <li>Keçi Kalesi</li>
+                  <li>Esentepe Mesire Alanı</li>
+                  <li>Ramazan Dede Türbesi</li>
+                  <li>Aykut Dağı Kayak Merkezi</li>
+                  <li>Yıldırım Beyazıt Camii</li>
+                  <li>Gerede Panayırı</li>
+                  <li>Kiliseli Tüccar Hanı</li>
+              </ul>
+              <h4>Gerede'de meşhur lezzetler:</h4>
+          <ul>
+              <li>Şakşak Helvası</li>
+              <li>Köfter</li>
+              <li>Mıhlama</li>
+              <li>Keş</li>
+              <li>Kaz</li>
+              <li>Tarhana Çorbası</li>
+              <li>Etli Üçgen Makarna</li>
+          </ul>
+          </div>
+      </div>
+  </div>
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="5" aria-label="Slide 6"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <a href="sehrim2.html"><img src="gölcükAK.jpeg" class="d-block w-100" alt="Gölcük" width="650px" height="380px"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>GÖLCÜK</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <a href="sehrim2.html"><img src="yg10.jpeg" class="d-block w-100" alt="Yedigöller" width="650px" height="380px"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>YEDİGÖLLER</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <a href="sehrim2.html"><img src="abant.jpeg" class="d-block w-100" alt="Abant Gölü" width="650px" height="380px"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>ABANT GÖLÜ</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <a href="sehrim2.html"><img src="tokadi.jpeg" class="d-block w-100" alt="Tokadi Hayretttin Türbesi" width="650px" height="380px"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>TOKADİ HAYRETTİN TÜRBESİ</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <a href="sehrim2.html"><img src="traverten.jpeg" class="d-block w-100" alt="Akkaya Travertenleri" width="650px" height="380px"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>AKKAYA TRAVERTENLERİ</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <a href="sehrim2.html"><img src="panayırr.jpeg" class="d-block w-100" alt="Gerede Panayırı" width="650px" height="380px"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>GEREDE PANAYIRI</h5>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <a href="#esentepe">><img src="esenntepe.jpeg" class="d-block w-100" alt="Gerede Esentepe" width="650px" height="380px"></a>
+        <div class="carousel-caption d-none d-md-block">
+          <h5>GEREDE ESENTEPE</h5>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>    
+      <div class="meshur">
+        <h3>Bolu'nun Meşhur Lezzetleri</h3>
+        <div class="card-group">
+          <div class="card">
+            <img src="sarayhelvasi.jpeg" class="card-img-top" alt="Saray Helvası" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Saray Helvası</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="yoggozleme.jpeg" class="card-img-top" alt="gözleme" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Yoğurtlu Gözleme</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="eriste.jpeg" class="card-img-top" alt="eriste" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Keşli Cevizli Erişte</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="bolci.jpeg" class="card-img-top" alt="bolçi çikolata" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Bolçi Çikolata</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="ekmek.jpeg" class="card-img-top" alt="Patatesli Köy Ekmeği" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Patatesli Köy Ekmeği</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="kedibatmaz.jpeg" class="card-img-top" alt="Kedibatmaz" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Kedi Batmaz</small></p>
+            </div>
+          </div>
+        </div>
+      </div> <br><br>
+      <div class="meshur2">
+        <h3>Gerede'nin Meşhur Lezzetleri</h3>
+        <div class="card-group">
+          <div class="card">
+            <img src="saksak.jpeg" class="card-img-top" alt="Şakşak Helvası" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Şakşak Helvası</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="köfterr.jpeg" class="card-img-top" alt="Köfter" width="200" height="200">
+            <div class="casrd-body">
+              <p class="card-text"><small class="text-muted">Köfter</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="tarhanaa.jpeg" class="card-img-top" alt="Tarhana" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Tarhana</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="kes.jpeg" class="card-img-top" alt="Keş" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Keş</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="makar.jpeg" class="card-img-top" alt="Koca Makarna" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Kıymalı Üçgen Makarna</small></p>
+            </div>
+          </div>
+          <div class="card">
+            <img src="mıhlama.jpeg" class="card-img-top" alt="Mıhlama" width="200" height="200">
+            <div class="card-body">
+              <p class="card-text"><small class="text-muted">Mıhlama</small></p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer class="sehrimf">
+        <a href="iletisim.html">iletişim</a>
+      </footer>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
