--- a/kişisel web sitesi/index.html
+++ b/kişisel web sitesi/index.html
@@ -17,7 +17,7 @@
                 <i class="fa-solid fa-computer"></i>ESMA YILDIZ
             </div>
             <ul>
-                <li><a href="Hakkimda.html" class="aktif"><i class="fas fa-user"></i>Hakkımda</a></li>
+                <li><a href="index.html" class="aktif"><i class="fas fa-user"></i>Hakkımda</a></li>
                 <li><a href="ozgecmis.html"><i class="fas fa-edit"></i>Özgeçmiş</a></li>
                 <li><a href="sehrim.html"><i class="fas fa-tree"></i>Şehrim</a></li>
                 <li><a href="mirasımız.html"><i class="fas fa-leaf"></i>Mirasımız</a></li>
