--- a/kişisel web sitesi/login.html
+++ b/kişisel web sitesi/login.html
@@ -16,7 +16,7 @@
         <div class="logologin">
             <img src="logologin3.jpeg" alt="logo">
         </div>
-        <form action="http://localhost/loginn.php" method="POST" id="formm" name="formm" onsubmit="return formcntrl()" >
+        <form action="loginn.php" method="POST" id="formm" name="formm" onsubmit="return formcntrl()" >
             <div class="titleLogo">Login</div>
             <div class="girisKutusu">
                 <input type="email" name="yourMail" id="yourMail" placeholder="E-mailinizi Giriniz">
