--- a/kişisel web sitesi/sehrim.html
+++ b/kişisel web sitesi/sehrim.html
@@ -15,7 +15,7 @@
         <i class="fa-solid fa-computer"></i>ESMA YILDIZ
     </div>
     <ul>
-      <li><a href="Hakkimda.html"><i class="fas fa-user"></i>Hakkımızda</a></li>
+      <li><a href="index.html"><i class="fas fa-user"></i>Hakkımızda</a></li>
       <li><a href="ozgecmis.html"><i class="fas fa-edit"></i>Özgeçmiş</a></li>
       <li><a href="sehrim.html" class="aktif"><i class="fas fa-tree"></i>Şehrim</a></li>
       <li><a href="mirasımız.html"><i class="fas fa-leaf"></i>Mirasımız</a></li>
