--- a/kişisel web sitesi/sehrim2.html
+++ b/kişisel web sitesi/sehrim2.html
@@ -15,9 +15,9 @@
         <i class="fa-solid fa-computer"></i>ESMA YILDIZ
     </div>
     <ul>
-        <li><a href="Hakkimda.html"><i class="fas fa-user"></i>Hakkımızda</a></li>
+        <li><a href="index.html"><i class="fas fa-user"></i>Hakkımızda</a></li>
         <li><a href="ozgecmis.html"><i class="fas fa-edit"></i>Özgeçmiş</a></li>
-        <li><a href="sehrim.html"><i class="fas fa-tree"></i>Şehrim</a></li>
+        <li><a href="sehrim.html" class="aktif"><i class="fas fa-tree"></i>Şehrim</a></li>
         <li><a href="mirasımız.html"><i class="fas fa-leaf"></i>Mirasımız</a></li>
         <li><a href="ilgiAlanlarım.html"><i class="fas fa-camera"></i>İlgi Alanlarım</a></li>
         <li><a href="iletisim.html"><i class="fas fa-phone"></i>İletişim</a></li>
